--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "MonsterHunterInventory",
-  "displayName": "MonsterHunterInventory"
+  "name": "Monster Hunter Inventory",
+  "displayName": "Monster Hunter Inventory"
 }
